Attempted to fix image alignment issue

--- a/app/stylesheets/_landing.scss
+++ b/app/stylesheets/_landing.scss
@@ -34,3 +34,9 @@
     }
   }
 }
+
+img {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+}
