--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -48,6 +48,11 @@ body.landing {
     .selling-points .point p {
       font-size: 14px; }
 
+img {
+  max-width: 100%;
+  margin: 0;
+  padding: 0; }
+
 .album-header-container {
   margin-top: 55px;
   margin-bottom: 40px; }
